--- a/style.css
+++ b/style.css
@@ -10,14 +10,14 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f3f4f6;
+    background-color: #39BEE3;
 }
 
 .login-container {
     width: 100%;
     max-width: 400px;
     padding: 2rem;
-    background-color: #ffffff;
+    background: #FFFFFF;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
@@ -61,5 +61,13 @@ button {
 }
 
 button:hover {
-    background-color: #45a049;
+    background: #39BEE3;
+}
+h4 {
+    width: 555px;
+    height: 50px;
+    flex-shrink: 0;
+    border-radius: 100px;
+    border: 1px solid #000;
+    background: #FFF;
 }
